# transcriber

./: .gitignore  pyproject.toml  readme.md  transcribe.py
